workspace/operators/v1/screening/quick_screen_5min.md
---
id: quick_screen_5min
name: 5分钟快速排除法
category: screening
tags: [screening, initial_filter]
data_needed: [basic_info, price_summary, financial_summary, cash_flow]
outputs:
  - field: price_position_pct
    type: float
    desc: 价格位置百分比 (0-100)
  - field: debt_ratio_pct
    type: float
    desc: 资产负债率
  - field: consecutive_profit_years
    type: int
    desc: 连续盈利年数
  - field: pass_screening
    type: bool
    desc: 是否通过初筛
  - field: screening_notes
    type: str
    desc: 筛选结论备注
---

## 5分钟快速排除法

### 目的

在深入分析之前，用不超过5分钟时间对标的做快速排除判断。通过4步结构化检查，排除明显不合格的标的，避免在低质量标的上浪费深度分析资源。

### 前置条件

- 已获取标的基础信息（名称、代码、行业、上市时间）
- 已获取最新价格与52周高低点数据
- 已获取最近一期财务摘要（负债、现金、盈利）

---

### 筛选流程

#### 第零步：地缘政治快速核查（30秒）

在进入财务筛选之前，先做地缘政治风险排除（详见 `geopolitical_exclusion` 算子）：

| 检查项 | 排除标准 | 处置 |
|--------|---------|------|
| 非洲/冲突区资产占比 | >10% | 一票否决 |
| 东南亚冲突区主营业务 | 有 | 一票否决 |
| 单一非发达国家市场占比 | >30% | 标记风险折价 |

未通过地缘政治核查的标的，无需进入后续财务筛选。

#### 第一步：基础排除（30秒）

以下任一条件满足则直接排除，无需继续：

| 检查项 | 排除标准 | 原因 |
|--------|---------|------|
| ST标记 | 名称含ST、*ST | 退市风险，基本面严重恶化 |
| 上市时间 | 上市不足3年 | 历史数据不足，无法验证周期表现 |
| 审计意见 | 最近一期非"标准无保留意见" | 财务数据可信度存疑 |
| 停牌状态 | 长期停牌或频繁停牌 | 流动性风险 |

#### 第二步：价格位置检查（1分钟）

| 检查项 | 排除标准 | 原因 | 处置 |
|--------|---------|------|------|
| 距52周高点跌幅 | 距52周高点 < 30% | 尚未充分调整，安全边际不足 | 排除 |
| 距52周低点距离 | 距52周低点 > 50% | 已大幅反弹，可能错过最佳买点 | 标记观察 |
| 长期趋势 | 股价3年内持续下跌无企稳迹象 | 可能存在基本面持续恶化 | 需额外核查 |

**决策**：价格位置不在安全区域 -> 放入观察列表，不进入深度分析。

#### 第三步：负债快速扫描（1.5分钟）

| 检查项 | 排除标准 | 原因 | 处置 |
|--------|---------|------|------|
| 财务费用 | 年财务费用 > 5亿元（非金融/非周期行业） | 高财务成本侵蚀利润 | 排除 |
| 有息负债率 | 有息负债/总资产 > 60% | 财务风险过高 | 排除 |
| 盈利连续性 | 连续2年及以上亏损 | 经营能力存疑 | 排除 |
| 短期偿债 | 流动比率 < 0.5 | 短期偿债压力极大 | 排除 |

**注意**：银行、保险等金融行业及重资产周期行业需使用行业专属阈值，不适用上述通用标准。

#### 第四步：现金覆盖与安全边际（2分钟）

| 检查项 | 排除标准 | 原因 | 处置 |
|--------|---------|------|------|
| 现金覆盖率 | 现金及等价物 < 市值的20% | 安全边际不足 | 排除 |
| 经营现金流 | 经营现金流/净利润 < 50%（连续2年） | 盈利质量差，利润含金量低 | 排除 |
| FCF倍数估算 | (市值-净现金)/经营现金流 > 10倍 | 估值偏高 | 排除 |

**高现金公司附加检查**：
- 净现金/市值 > 30% 且 无有息负债 -> 计算FCF倍数
- FCF倍数 < 5倍 -> 标记为高优先候选
- FCF倍数 5-10倍 -> 正常进入深度分析
- FCF倍数 > 10倍 -> 排除

---

### 综合决策矩阵

| 结果 | 条件 | 下一步 |
|------|------|--------|
| 直接排除 | 任一步骤触发排除条件 | 记录排除原因，归档 |
| 放入观察列表 | 价格位置不佳但基本面无硬伤 | 设置价格提醒，等待回调 |
| 进入深度分析 | 四步全部通过 | 进入后续章节分析流程 |

### 输出格式

```
标的：[名称] [代码]
筛选结果：通过 / 排除 / 观察
排除原因（如适用）：[具体步骤及触发条件]
关键指标：
  - 距52周高点跌幅：X%
  - 财务费用：X亿
  - 现金/市值：X%
  - FCF倍数：X倍
```

### 注意事项

- 快速筛选仅为初步排除，通过不代表值得买入
- 所有阈值为通用参考值，策略可通过配置文件覆盖
- 遇到边界值情况（如某指标恰好在阈值附近），应标记为"需人工复核"而非机械排除
